# APEX-Student-Portal

./: CMakeLists.txt  README.md  httplib.h  main  main.cpp  run.sh  server  server.cpp
Database/:  .json  aditya0dagar@gmail.com.json  data.json  users.csv
Templates/: index.html
Templates/HTML/: about.html  index.html  login.html  profile.html
Templates/Scripts/: index.js  login.js  profile.js
Templates/css/: index.css  login.css  profile.css
libs/: crow_all.h
src/: auth.cpp  classes.cpp  classes.hpp  server.cpp  server.hpp
static/: about.css  login.js  profile.js  style.css
static/0/: about.css  index.css  login.css  profile.css  style.css
static/1/: about.css  index.css  login.css  profile.css  style.css
templates/: about.html  index.html  login.html  profile.html
